[tool.poetry]
name = "large-language-model"
version = "0.1.0"
description = ""
authors = ["phuc.nguyen <phuc.nguyen@ttekglobal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
transformers = "^4.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
